--- a/static/genedive/view/graph/graph.css
+++ b/static/genedive/view/graph/graph.css
@@ -1,5 +1,6 @@
 .graph-view {
   position: relative;
+  overflow: hidden;
 }
 
 .graph-view #graph {
